# gemini-batch-prediction

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG_IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  codecov.yml  dev-requirements.txt  mkdocs.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs-lint.yml  docs.yml  release.yml  reusable-checks.yml
cookbook/: README.md  __init__.py  __main__.py
cookbook/data/: README.md
cookbook/getting-started/: analyze-single-paper.py  batch-process-files.py  conversation-follow-ups.py  extract-video-insights.py  structured-json-robust.py  token-estimate-preview.py  youtube-qa-timestamps.py
cookbook/optimization/: cache-warming-and-ttl.py  chunking-large-docs.py  context-caching-explicit.py  efficiency-comparison.py  large-scale-batching.py  long-transcript-chunking.py  multi-format-pipeline.py
cookbook/production/: custom-integrations.py  monitoring-telemetry.py  observability-telemetry.py  rate-limits-and-concurrency.py  resume-on-failure.py
cookbook/research-workflows/: comparative-analysis.py  content-assessment.py  fact-table-extraction.py  literature-synthesis.py  multi-video-batch.py  system-instructions-with-research-helper.py
cookbook/templates/: custom-schema-template.py  recipe-template.py
cookbook/utils/: __init__.py  data_paths.py  demo_inputs.py  json_tools.py  retry.py
dev/: README.md  logging.md  telemetry_internals.md
dev/design/: cache_manager_planner_pattern.md
docs/: CACHING.md  CONVERSATION.md  DEVELOPMENT_STANDARDS.md  LOGGING.md  SETUP.md  SOURCE_HANDLING.md  TELEMETRY.md  TESTING_STRATEGY.md  advanced-extensibility.md  cookbook.md  index.md  metrics.md  roadmap.md  source-handling.md  telemetry.md  testing-strategy.md  tests.md
docs/contributing/: authoring_templates.md  contributing.md  cookbook_authoring.md  docs_quality_checklist.md  docs_style_guide.md  docstring_style.md
docs/domains/: extensions.md  research.md
docs/explanation/: architecture.md  error-handling.md  glossary.md  history.md
docs/how-to/: caching.md  chunking.md  configuration-migration.md  configuration.md  conversation-advanced.md  custom-transforms.md  faq.md  index.md  installation.md  logging.md  provider-adapters.md  provider-uploads.md  remote-file-materialization.md  source-handling.md  telemetry.md  testing.md  token-counting.md  troubleshooting.md  verify-real-api.md
docs/reference/: api-reference.md  caching.md  cli.md  configuration.md  index.md
docs/tutorials/: first-batch.md  index.md  quickstart.md
examples/: README.md  academic_research_demo.py  ai_study_buddy_demo.py  batch_text_demo.py  configuration_example.py  conversation_demo.py  custom_telemetry_reporter.py  prometheus_telemetry_demo.py  simple_demo.py  using_context_caching.py  validation_trigger_demo.py
examples/test_data/: README.md
gemini_batch/: __init__.py  batch_processor.py  client.py  config.py  constants.py  conversation.py  exceptions.py  gemini_client.py  telemetry.py  utils.py  visualization.py
gemini_batch/analysis/: __init__.py  content.py  visualization.py
gemini_batch/client/: __init__.py  cache_manager.py  configuration.py  content_processor.py  error_handler.py  models.py  prompt_builder.py  rate_limiter.py  token_counter.py
gemini_batch/efficiency/: __init__.py  metrics.py  tracking.py
gemini_batch/files/: __init__.py  extractors.py  operations.py  scanner.py  utils.py
gemini_batch/prompts/: __init__.py
gemini_batch/response/: __init__.py  extraction.py  parsing.py  processor.py  quality.py  result_builder.py  types.py  validation.py
notebooks/: week1_batch_processing_demo.ipynb  week3_literature_review_demo.ipynb
scripts/: demo_data.py
src/gemini_batch/: __init__.py  _dev_flags.py  batch_processor.py  config.py  constants.py  conversation.py  exceptions.py  executor.py  frontdoor.py  gemini_client.py  telemetry.py  types.py  utils.py
templates/: .macros.j2  .release_notes.md.j2  CHANGELOG.md.j2
tests/: adapters.py  conftest.py  helpers.py
tests/api/: test_api_multimodal.py  test_api_structured_output.py
tests/characterization/: test_batch_process.py  test_batch_process_behavior.py  test_changelog_rendering.py  test_client_features.py  test_content_processing_behavior.py  test_content_processor.py  test_conversation.py  test_conversation_behavior.py  test_placeholder_v1_characterization.py  test_processor_features.py
tests/contracts/: test_architectural_fitness.py  test_clarity.py  test_config_contracts.py  test_config_invariants.py  test_config_minimal.py  test_config_security.py  test_conversation_contracts.py  test_maintainability.py  test_persistence_and_store.py  test_rate_constraints.py  test_robustness.py  test_simplicity.py
tests/cookbook/: conftest.py  support.py  test_runner.py
tests/fixtures/: __init__.py  api_responses.py  content_samples.py  core.py  extensions.py  pipeline.py  templates.py  workflows.py
tests/integration/: test_batch_processor.py  test_batch_processor_workflows.py  test_caching_workflows.py  test_client.py  test_config.py  test_config_integration.py  test_conversation_workflows.py  test_core_workflows.py  test_pipeline_e2e.py  test_semantic_release_integration.py  test_utils.py
tests/unit/: test_batch_processor.py  test_batch_processor_unit.py  test_cache_singleflight.py  test_changelog_template.py  test_changelog_update_mode.py  test_client.py  test_concurrency_resolution.py  test_config.py  test_conversation.py  test_conversation_advanced_features.py  test_conversation_extension.py  test_conversation_hints.py  test_efficiency_and_metrics.py  test_executor_invariants.py  test_files_and_content_processing.py  test_prompt_builders.py  test_remote_materialization.py  test_research_efficiency.py  test_response_extraction.py  test_upload_singleflight.py  test_upload_task_indexing.py  test_utils.py
tests/workflows/: test_contracts.py  test_execution.py  test_release.py  test_semantic_release_integration.py  (+4 more)
tests_old/: conftest.py
(+337 files in other folders)
